--- a/templates/main.html
+++ b/templates/main.html
@@ -1,10 +1,19 @@
 {% extends "header.html" %}
 {% block content %}
+<div class="row well">
+  <div class="col-md-12 text-center">
+    <h2><a href="#">For Sale</a></h2>
+  </div>
+</div>
 
-  <ul>
-    {% for cat in categories %}
-    <li><a href="#">{{ cat.category }}</a></li>
-    {% endfor %}
-  </ul>
+<main class="row">
+  <div class="col-md-6 col-md-offset-5">
+    <ul class="list-unstyled">
+      {% for cat in categories %}
+      <li><a href="#">{{ cat.category }}</a></li>
+      {% endfor %}
+    </ul>
+  </div>
+</main>
 
 {% endblock %}
