--- a/templates/post_category.html
+++ b/templates/post_category.html
@@ -2,18 +2,29 @@
 {% block content %}
 
 {% if error %}
-<div class="alert alert-danger">
-  <h4 class="text-center">{{ error }}</h4>
+<div class="row">
+  <div class="col-md-12">
+    <div class="alert alert-danger">
+      <h4 class="text-center">{{ error }}</h4>
+    </div>
+  </div>
 </div>
 {% endif %}
 
 {% if post|length != 0  %}
-{%for post in posts%}
+  {%for post in posts%}
 
-<h2>OLA</h2>
+  <h2>OLA</h2>
 
-{% endfor %}
+  {% endfor %}
 {% endif %}
+
+<div class="row">
+  <div class="col-md-6">
+    <a href="/create/{{ cat }}" class="btn btn-primary">Create Post</a>
+  </div>
+
+</div>
 
 
 {% endblock %}
