--- a/templates/header.html
+++ b/templates/header.html
@@ -12,8 +12,10 @@
           <span class="navbar-brand">Item Catalog Project</span>
         </div>
         <ul class="nav navbar-nav">
-          <li><a href="#">Categories</a></li>
+          <li><a href="/">Categories</a></li>
           <li><a href="#">My post</a></li>
+          <li><a href="/login">Login</a></li>
+          <li><a href="/disconnect">Logout</a></li>
         </ul>
       </div>
     </nav>
