--- a/templates/login.html
+++ b/templates/login.html
@@ -24,7 +24,7 @@
                 if (result) {
                     $('#result').html('Login Successful!</br>' + result + '</br>Redirecting...')
                     setTimeout(function() {
-                        window.location.href = '/main';
+                        window.location.href = '/';
                     }, 4000)
                 } else if (authResult['error']) {
                     console.log('There was an error: ' + authResult['error']);
@@ -34,7 +34,7 @@
             }
         })
     }
-    </script>    
+    </script>
 </head>
 
 <body>
