--- a/templates/post_category.html
+++ b/templates/post_category.html
@@ -11,6 +11,22 @@
 </div>
 {% endif %}
 
+
+<div class="row">
+  <div class="col-md-12">
+    {% with messages = get_flashed_messages() %}
+    {% if messages %}
+
+    <div class="alert alert-danger">
+      {% for message in messages %}
+        <h4 class="text-center">{{ message }}</h4>
+      {% endfor %}
+    </div>
+    {% endif %}
+    {% endwith %}
+  </div>
+</div>
+
 {% if post|length != 0  %}
   {%for post in posts%}
 
