--- a/templates/header.html
+++ b/templates/header.html
@@ -1,27 +1,29 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">    
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <meta charset="utf-8">
     <title>Item Catalog</title>
   </head>
   <body>
+
     <nav class="navbar navbar-default navbar-static-top">
       <div class="container">
         <div class="navbar-header">
           <span class="navbar-brand">Item Catalog Project</span>
         </div>
         <ul class="nav navbar-nav">
-          <li><a href="/">Categories</a></li>
-          <li><a href="#">My post</a></li>
+          <li><a href="/">Categories</a></li>          
           <li><a href="/login">Login</a></li>
           <li><a href="/disconnect">Logout</a></li>
         </ul>
       </div>
     </nav>
+
     <div class="container">
       {% block content %}
       {% endblock %}
-    </div>
+    </div> <!-- div.container -->
+
   </body>
 </html>
