--- a/templates/main.html
+++ b/templates/main.html
@@ -1,8 +1,11 @@
 {% extends "header.html" %}
 {% block content %}
-<div class="row well">
-  <div class="col-md-12 text-center">
-    <h2><a href="#">For Sale</a></h2>
+<div class="row">
+  <div class="col-md-6 col-md-offset-5">
+    <h2>Categories</h2>
+  </div>
+  <div class="col-md-12">
+    <hr>
   </div>
 </div>
 
