--- a/templates/resume_item.html
+++ b/templates/resume_item.html
@@ -24,7 +24,7 @@
     <p>{{ item.description }}</p>
   </div>
   <div class="col-md-12">
-    <a href="#">Edit</a> | <a href="/remove/{{ item.item_id }}">Remove</a> | <a href="#">Back</a>
+    <a href="/edit/{{ item.item_id }}">Edit</a> | <a href="/remove/{{ item.item_id }}">Remove</a> | <a href="#">Back</a>
   </div>
 </div>
 
