--- a/templates/main.html
+++ b/templates/main.html
@@ -9,6 +9,21 @@
   </div>
 </div>
 
+<div class="row">
+  <div class="col-md-12">
+    {% with messages = get_flashed_messages() %}
+    {% if messages %}
+
+    <div class="alert alert-warning">
+      {% for message in messages %}
+        <h4 class="text-center">{{ message }}</h4>
+      {% endfor %}
+    </div>
+    {% endif %}
+    {% endwith %}
+  </div>
+</div>
+
 <main class="row">
   <div class="col-md-6 col-md-offset-5">
     <ul class="list-unstyled">
